# app/Config/Routes.php
@@ -19,3 +19,4 @@ $routes->get('/api/v1/retail_eggtv/(:num)/issues/(:num)', 'Products\EggTv\Ticket
 $routes->put('/api/v1/retail_eggtv/(:num)/issues/(:num)', 'Products\EggTv\Ticket::updateTicketIssue/$1/$2');
 $routes->get('/api/v1/retail_eggtv/(:num)/issues/(:num)/codes', 'Products\EggTv\Ticket::readAllTicketCodes/$1/$2');
 $routes->put('/api/v1/retail_eggtv/(:num)/issues/(:num)/codes', 'Products\EggTv\Ticket::updateTicketCode/$1/$2');
+$routes->get('/api/v1/retail_eggtv/search', 'Products\EggTv\Ticket::searchTicketCode');
